[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/order_panel.gd" id="1_order_panel_script"]

[node name="OrderPanel" type="PanelContainer"]
script = ExtResource("1_order_panel_script")
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -280.0
offset_right = 420.0
offset_bottom = -16.0

[node name="VBox" type="VBoxContainer" parent="."]
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
text = "Order to General"

[node name="OrderTextEdit" type="TextEdit" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 170)

[node name="SendButton" type="Button" parent="VBox"]
unique_name_in_owner = true
text = "Send Order"
